brand section, table, adaptivity

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -1991,6 +1991,32 @@
           "imported": false,
           "parents": [],
           "type": "css"
+        },
+        "ca9b870b": {
+          "id": "ca9b870b",
+          "path": "img/cat-item.jpg",
+          "output": "img/cat-item.jpg",
+          "name": "cat-item.jpg",
+          "category": "IMAGE",
+          "size": 296632,
+          "type": "jpg",
+          "initialSize": 296632,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "de9415d1": {
+          "id": "de9415d1",
+          "path": "img/price-triangle.png",
+          "output": "img/price-triangle.png",
+          "name": "price-triangle.png",
+          "category": "IMAGE",
+          "size": 1031,
+          "type": "png",
+          "initialSize": 1031,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
