adaptive for table, animation brand-buttons

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -2017,6 +2017,64 @@
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "033743a1": {
+          "id": "033743a1",
+          "path": "libs/owl/owl.carousel.min.js",
+          "output": "libs/owl/owl.carousel.min-dist.js",
+          "name": "owl.carousel.min.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "c1711187": {
+          "id": "c1711187",
+          "path": "libs/owl/assets/owl.carousel.css",
+          "output": "libs/owl/assets/owl.carousel-dist.css",
+          "name": "owl.carousel.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "fa472cd6": {
+          "id": "fa472cd6",
+          "path": "img/m-header-logo.png",
+          "output": "img/m-header-logo.png",
+          "name": "m-header-logo.png",
+          "category": "IMAGE",
+          "size": 19914,
+          "type": "png",
+          "initialSize": 19914,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "64def689": {
+          "id": "64def689",
+          "path": "img/button.png",
+          "output": "img/button.png",
+          "name": "button.png",
+          "category": "IMAGE",
+          "size": 1244,
+          "type": "png",
+          "initialSize": 1244,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
