slider, menu hover, blocks for slider

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -2075,6 +2075,45 @@
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "b840f161": {
+          "id": "b840f161",
+          "path": "img/slider-arrows.png",
+          "output": "img/slider-arrows.png",
+          "name": "slider-arrows.png",
+          "category": "IMAGE",
+          "size": 1361,
+          "type": "png",
+          "initialSize": 1361,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "2dfaa204": {
+          "id": "2dfaa204",
+          "path": "img/menu-arrow.png",
+          "output": "img/menu-arrow.png",
+          "name": "menu-arrow.png",
+          "category": "IMAGE",
+          "size": 1069,
+          "type": "png",
+          "initialSize": 1069,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "97618f3c": {
+          "id": "97618f3c",
+          "path": "img/review.jpg",
+          "output": "img/review.jpg",
+          "name": "review.jpg",
+          "category": "IMAGE",
+          "size": 1999019,
+          "type": "jpg",
+          "initialSize": 1999019,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
